# presedati

circonfArm/: CMakeLists.txt
circonfArm/app/: CMakeLists.txt
circonfArm/app/conf/: circonfArm_config.ini  circonfArm_config_XY.ini  circonfArm_config_XZ.ini  circonfArm_config_YZ.ini  circonfArm_icubSim_DS1_config.ini  circonfArm_icubSim_DS1slow_config.ini  circonfArm_icubSim_DS2_config.ini  circonfArm_icubSim_DS2slow_config.ini  circonfArm_icubSim_DS3_config.ini  circonfArm_icubSim_DS3slow_config.ini  circonfArm_icub_DS1_config.ini  circonfArm_icub_DS1slow_config.ini  circonfArm_icub_DS2_config.ini  circonfArm_icub_DS2slow_config.ini  circonfArm_icub_DS3_config.ini  circonfArm_icub_DS3slow_config.ini
circonfArm/app/scripts/: app.xml  app.xml~  app_icub.xml  app_icubsim.xml  app_icubsim_XY.xml  app_icubsim_XZ.xml  app_icubsim_YZ.xml  signalsMask.lua  system.xml
circonfArm/src/: CMakeLists.txt  main.cpp  syncEst.cpp
circonfArm/src/.kdev4/: src.kdev4
